[gd_scene load_steps=5 format=3 uid="uid://c3675kjr1kotv"]

[ext_resource type="PackedScene" uid="uid://73vkj3ho7ou5" path="res://scenes/GUI/tooltips/gui_tooltip.tscn" id="1_s0tpt"]
[ext_resource type="Script" uid="uid://co4qsb03447xi" path="res://scenes/GUI/tooltips/gui_weather_ability_tooltip.gd" id="2_s0tpt"]
[ext_resource type="PackedScene" uid="uid://cjwhkrmueycbi" path="res://scenes/GUI/shared/descriptions/shared_description/gui_action_list.tscn" id="3_jh7fg"]
[ext_resource type="Texture2D" uid="uid://b7wii3f367lyi" path="res://resources/sprites/GUI/backgrounds/bordered_background.png" id="3_uoxqo"]

[node name="GUIWeatherAbilityTooltip" instance=ExtResource("1_s0tpt")]
offset_right = 40.0
offset_bottom = 12.0
script = ExtResource("2_s0tpt")

[node name="Border" parent="." index="0"]
visible = false

[node name="Background" parent="." index="1"]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="ContentContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="ToPlaintContainer" type="PanelContainer" parent="ContentContainer/HBoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToPlantBackground" type="NinePatchRect" parent="ContentContainer/HBoxContainer/ToPlaintContainer" index="0"]
self_modulate = Color(0.9647059, 0.7921569, 0.62352943, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_uoxqo")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/HBoxContainer/ToPlaintContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ToPlantNameLabel" type="Label" parent="ContentContainer/HBoxContainer/ToPlaintContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_mid"
horizontal_alignment = 1

[node name="ToPlantGUIActionList" parent="ContentContainer/HBoxContainer/ToPlaintContainer/VBoxContainer" index="1" instance=ExtResource("3_jh7fg")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToPlantRichTextLabel" type="RichTextLabel" parent="ContentContainer/HBoxContainer/ToPlaintContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2
tab_size = 0

[node name="ToPlayerContainer" type="PanelContainer" parent="ContentContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToPlayerBackground" type="NinePatchRect" parent="ContentContainer/HBoxContainer/ToPlayerContainer" index="0"]
self_modulate = Color(0.9647059, 0.7921569, 0.62352943, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("3_uoxqo")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContentContainer/HBoxContainer/ToPlayerContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ToPlayerNameLabel" type="Label" parent="ContentContainer/HBoxContainer/ToPlayerContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HUD_mid"
horizontal_alignment = 1

[node name="ToPlayerGUIActionList" parent="ContentContainer/HBoxContainer/ToPlayerContainer/VBoxContainer" index="1" instance=ExtResource("3_jh7fg")]
unique_name_in_owner = true
layout_mode = 2

[node name="ToPlayerRichTextLabel" type="RichTextLabel" parent="ContentContainer/HBoxContainer/ToPlayerContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_type_variation = &"RichTextControlTip"
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2
tab_size = 0
